--- a/public/assets/css/frontend.css
+++ b/public/assets/css/frontend.css
@@ -34,7 +34,9 @@ body {
 .product__category__list {
 }
 
-.product__category__list li {
+.product__category__list {
+    list-style-type: none;
+    padding-left: 0;
 }
 
 .product__category__list li::before {
@@ -58,4 +60,99 @@ body {
     margin-left: auto;
     font-weight: 600;
     color: rgb(153, 153, 153);
+}
+.product__category__list li a:hover {
+    color: var(--theme-color);
+}
+
+
+/* Products */
+/* Product Card */
+.product__wrapper {
+    padding: 5px;
+    border: 1px solid #e5e5e5;
+    padding: 5px 15px 25px;
+    transition: box-shadow .2s linear;
+}
+
+.product__wrapper:hover {
+    box-shadow: 1px 1px 10px #ccc;
+}
+
+.product__image__wrapper {
+    text-align: center;
+    position: relative;
+
+    position: relative;
+    height: 0;
+    padding-bottom: calc(100%/(var(--prooduct-image-aspect-ratio)));
+}
+
+.product__image__wrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.product__badge {
+    position: absolute;
+    top: 10px;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    font-size: 14px;
+    padding: 2px 10px;
+}
+
+.product__badge.sale__badge {
+    left: 0;
+}
+
+.product__badge.new__badge {
+    background-color: var(--theme-color);
+    right: 0;
+}
+
+
+.product__info__wrapper {
+    padding: 5px 10px;
+}
+
+.product__name {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.product__name:hover {
+    text-decoration: none;
+}
+
+.product__subtitle {
+    font-size: .9rem;
+    font-weight: 400;
+    color: #666;
+}
+
+.product__price {
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+.product__old__price {
+    font-weight: 600;
+    font-size: .95rem;
+    text-decoration: line-through;
+    color: #837e7e;
+}
+
+.product__button {
+    font-size: .9rem;
+    letter-spacing: 1px;
+}
+
+.view__more__info__btn {
+    background-color: var(--theme-color);
 }
