--- a/public/starter.css
+++ b/public/starter.css
@@ -1,79 +1,85 @@
-body{
-    font-family: 'Open Sans', sans-serif;
-    
+body {
+    font-family: "Open Sans", sans-serif;
 }
-img{
+img {
     max-width: 100%;
 }
-p{
+p {
     margin-bottom: 0px;
 }
-ul{
+
+/* Footer item */
+.footer-item ul {
     margin: 0px;
     padding: 0px;
-    /* list-style: none; */
+    list-style: none;
 }
-body{
-    font-family: 'Open Sans', sans-serif;
+body {
+    font-family: "Open Sans", sans-serif;
 }
 
-.sp-top-wrapper{
-    background: linear-gradient(
-        120deg
-        ,var(--theme-color) 50%,#f1c7cd 50%);
-        padding: 6px 0px;
+/* Topbar */
+.topbar-wrapper {
+    /* background: linear-gradient(120deg, var(--theme-color) 50%, #f1c7cd 50%); */
+    background: linear-gradient(120deg, var(--theme-color) 50%, #28a745 50%);
+    padding: 6px 0px;
 }
-.contact_info li{
+.contact_info{
+    padding-left: 0;
+}
+.contact_info li {
     display: inline;
     margin-right: 12px;
 }
-.contact_info li a{
+.contact_info li a {
     font-size: 14px;
     color: #fff;
 }
-.contact_info li a i{
+.contact_info li a i {
     padding-right: 12px;
 }
 .social {
     float: right;
 }
-.social li{
+.social li {
     display: inline;
     margin-right: 24px;
 }
-.social li a{
+.social li a {
     color: #ffff;
 }
-.social li a:hover{
+.social li a:hover {
     color: var(--theme-color);
 }
+/* End of top bar */
+
+/* Navbar */
 .navbar-expand-lg .navbar-nav .nav-link {
     /* padding-right: .5rem; */
     /* padding-left: .5rem; */
-    padding: 0 20px!important;
+    padding: 0 20px !important;
     font-weight: bold;
     text-transform: uppercase;
-    font-size:17px;
+    font-size: 17px;
 }
-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
-    color: rgb(230 13 46)!important;
+nav .nav-link.show,
+.navbar-light .navbar-nav .show > .nav-link {
+    color: rgb(230 13 46) !important;
 }
-.banner{
-  position: relative;  
+.banner {
+    position: relative;
 }
-.banner_title{
-    background: rgba(63,180,251,0.7) !important;
+.banner_title {
+    background: rgba(63, 180, 251, 0.7) !important;
     color: #fff;
     font-size: 41px !important;
     padding: 7px 40px;
     position: absolute;
     top: 163px;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     font-weight: bold;
-   
-
 }
-.banner{
+.banner {
     background: #f3f7ff;
 }
 
@@ -84,9 +90,9 @@ nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     content: "";
     height: 10px;
     width: 100%;
-    background: rgba(255,255,255,0.7);
+    background: rgba(255, 255, 255, 0.7);
 }
-.banner_title:after{
+.banner_title:after {
     right: -11px;
     top: -11px;
     content: "";
@@ -94,20 +100,19 @@ nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     width: 0;
     border: 19px solid transparent;
     /* border-left: 1px solid rgba(255,255,255,0.7); */
-    border-top: 90px solid rgba(255,255,255,0.7);
+    border-top: 90px solid rgba(255, 255, 255, 0.7);
     position: absolute;
- 
 }
-.product_wrap , .new_product{
+.product_wrap,
+.new_product {
     position: relative;
     margin-top: 40px;
 }
-.product{
-   border:  1px solid #f3f3f3;
-   margin-bottom: 15px;
-   
+.product {
+    border: 1px solid #f3f3f3;
+    margin-bottom: 15px;
 }
-.product_right_tag h3{
+.product_right_tag h3 {
     font-size: 18px;
 }
 .border-title {
@@ -115,21 +120,21 @@ nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     border-bottom: 1px solid var(--theme-color);
     margin-bottom: 75px;
 }
-.product_add{
+.product_add {
     margin-top: 69px;
 }
-.product_add .border-title{
+.product_add .border-title {
     margin-bottom: 0;
 }
-.grid-link__org_price{
+.grid-link__org_price {
     font-weight: bold;
     font-size: 20px;
     margin-top: 17px;
     color: var(--theme-color);
 }
-.grid-link__meta p{
+.grid-link__meta p {
     font-size: 15px;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     margin-top: 12px;
 }
 
@@ -146,63 +151,63 @@ nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     height: 2px;
     background: #e60d2e;
 } */
-.product_right_tag{
+.product_right_tag {
     padding: 30px;
 }
-.product_img{
+.product_img {
     border: 1px solid #f3f3f3;
     overflow: hidden;
 }
 
 .carousel {
     position: relative;
-  }
-  .carousel-item img {
+}
+.carousel-item img {
     object-fit: cover;
-  }
-  #carousel-thumbs {
-    background: rgba(255,255,255,.3);
+}
+#carousel-thumbs {
+    background: rgba(255, 255, 255, 0.3);
     bottom: 0;
     left: 0;
     padding: 0 50px;
     right: 0;
-  }
-  #carousel-thumbs img {
+}
+#carousel-thumbs img {
     border: 5px solid transparent;
     cursor: pointer;
-  }
-  #carousel-thumbs img:hover {
-    border-color: rgba(255,255,255,.3);
-  }
-  #carousel-thumbs .selected img {
+}
+#carousel-thumbs img:hover {
+    border-color: rgba(255, 255, 255, 0.3);
+}
+#carousel-thumbs .selected img {
     border-color: #fff;
-  }
-  .carousel-control-prev,
-  .carousel-control-next {
+}
+.carousel-control-prev,
+.carousel-control-next {
     width: 50px;
-  }
-  .item-box{
+}
+.item-box {
     border: 1px solid #dad8d8;
     padding: 12px 25px;
     margin-bottom: 35px;
-  }
-  .category_text ul{
-      list-style: disc;
-      padding: 12px 15px;
-  }
-  .category_text ul li{
-      font-size: 14px;
-      margin-bottom:4px;
-      font-family: 'Source Sans Pro', sans-serif;
-  }
-  .address p{
-    font-family: 'Source Sans Pro', sans-serif;
+}
+.category_text ul {
+    list-style: disc;
+    padding: 12px 15px;
+}
+.category_text ul li {
+    font-size: 14px;
+    margin-bottom: 4px;
+    font-family: "Source Sans Pro", sans-serif;
+}
+.address p {
+    font-family: "Source Sans Pro", sans-serif;
     font-size: 16px;
-  }
-  .new_item{
-      text-align: center;
-  }
-  .footer-top-area:after {
+}
+.new_item {
+    text-align: center;
+}
+.footer-top-area:after {
     position: absolute;
     content: "";
     top: 0;
@@ -210,38 +215,34 @@ nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     width: 75%;
     height: 25px;
     background: #fff none repeat scroll 0 0;
-    -webkit-transform: skew(
-60deg
-);
-    transform: skew(
-60deg
-);
+    -webkit-transform: skew(60deg);
+    transform: skew(60deg);
 }
-.felona-footer-area{
+.felona-footer-area {
     margin-top: 40px;
-    
 }
 .address .contact_num {
     font-size: 18px;
     margin-top: 12px;
 }
-.contact_num i{
+.contact_num i {
     vertical-align: middle;
     margin-right: 12px;
 }
 
-
-.footer-block , .footer-item{
+.footer-block,
+.footer-item {
     color: #fff;
 }
-.site-footer__links li{
+.site-footer__links li {
     margin-bottom: 12px;
 }
-.site-footer__links li a{
+.site-footer__links li a {
     color: #fff;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
 }
-.footer-block h4 ,  .footer-item h4{
+.footer-block h4,
+.footer-item h4 {
     margin-bottom: 25px;
 }
 .footer-top-area {
@@ -252,35 +253,34 @@ nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     background: var(--theme-color) none repeat scroll 0 0;
     color: #636c72;
 }
-.section-header__title{
+.section-header__title {
     font-size: 26px;
     border-bottom: 2px solid var(--theme-color);
     /* width: 100%; */
     margin-bottom: 45px;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     background: var(--theme-color);
     display: inline;
     padding: 8px 12px;
     color: #fff;
-
 }
 
-.copyright-left{
+.copyright-left {
     text-align: center;
 }
 
-  @media all and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .carousel-container #carousel-thumbs img {
-      border-width: 3px;
+        border-width: 3px;
     }
-  }
-  @media all and (min-width: 576px) {
+}
+@media all and (min-width: 576px) {
     .carousel-container #carousel-thumbs {
-      position: absolute;
+        position: absolute;
     }
-  }
-  @media all and (max-width: 576px) {
+}
+@media all and (max-width: 576px) {
     .carousel-container #carousel-thumbs {
-      background: #ccccce;
+        background: #ccccce;
     }
-  }
+}
