--- a/public/assets/css/frontend.css
+++ b/public/assets/css/frontend.css
@@ -4,6 +4,7 @@ body {
 
 :root {
     --theme-color: #e60d2e;
+    --theme-accent-color: #ff5353;
     --dark-gray: #313445;
     --prooduct-image-aspect-ratio: 4/4;
 }
@@ -14,6 +15,14 @@ body {
 
 .bg-theme-color {
     background-color: var(--theme-color);
+}
+
+.text-theme-accent-color {
+    color: var(--theme-accent-color);
+}
+
+.bg-theme-accent-color {
+    background-color: var(--theme-accent-color);
 }
 
 .text-dark-gray {
@@ -50,7 +59,7 @@ body {
 }
 
 .product__category__list li a::before {
-    color: rgb(153, 153, 153);
+    color: / rgb(153, 153, 153);
     content: "❖";
     margin-right: 10px;
 }
@@ -61,6 +70,12 @@ body {
     font-weight: 600;
     color: rgb(153, 153, 153);
 }
+
+.product__category__list li a:hover::before,
+.product__category__list li a:hover::after {
+    color: var(--theme-accent-color);
+}
+
 .product__category__list li a:hover {
     color: var(--theme-color);
 }
@@ -100,10 +115,14 @@ body {
     position: absolute;
     top: 10px;
     background-color: #000;
-    color: #fff;
-    text-align: center;
-    font-size: 14px;
     padding: 2px 10px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 500;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.025em;
 }
 
 .product__badge.sale__badge {
@@ -111,7 +130,7 @@ body {
 }
 
 .product__badge.new__badge {
-    background-color: var(--theme-color);
+    background-color: var(--theme-accent-color);
     right: 0;
 }
 
