--- a/public/starter.css
+++ b/public/starter.css
@@ -24,7 +24,7 @@ body {
     background: linear-gradient(120deg, var(--theme-color) 50%, #28a745 50%);
     padding: 6px 0px;
 }
-.contact_info{
+.contact_info {
     padding-left: 0;
 }
 .contact_info li {
@@ -58,13 +58,18 @@ body {
     /* padding-right: .5rem; */
     /* padding-left: .5rem; */
     padding: 0 20px !important;
-    font-weight: bold;
+    font-weight: 500;
     text-transform: uppercase;
     font-size: 17px;
+    letter-spacing: .025em;
+    color: #555659;
 }
 nav .nav-link.show,
 .navbar-light .navbar-nav .show > .nav-link {
     color: rgb(230 13 46) !important;
+}
+.navbar-light .navbar-nav .nav-link.active {
+    color: #221965;
 }
 .banner {
     position: relative;
