--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -59,6 +59,15 @@ input:checked + .slider:before {
     transform: translateX(26px);
 }
 
+/* Squared */
+.switch.switch-square .slider {
+    border-radius: 0 !important;
+}
+
+.switch.switch-square .slider::before {
+    border-radius: 0 !important;
+}
+
 /* SVG icon */
 .svg-icon {
     display: inline-flex;
@@ -82,9 +91,7 @@ label.required::after {
     color: #ff3648;
 }
 
-
 /* Summernote  */
 .note-editor.card {
     box-shadow: none;
 }
-
