--- a/public/starter.css
+++ b/public/starter.css
@@ -57,7 +57,7 @@ body {
 .navbar-expand-lg .navbar-nav .nav-link {
     /* padding-right: .5rem; */
     /* padding-left: .5rem; */
-    padding: 0 20px !important;
+    padding: 8px 20px !important;
     font-size: 17px;
     text-transform: uppercase;
     /* font-weight: 600; */
@@ -70,8 +70,16 @@ nav .nav-link.show,
     color: rgb(230 13 46) !important;
 }
 .navbar-light .navbar-nav .nav-link.active {
-    color: #221965;
+    background-color: #f4f4f4;
+    background-color: paleturquoise;
+    border-radius: 2.5rem;
 }
+/* Remove active menu effect while showing overlay effect */
+#navbar #navbar-overlay.active ~ .navbar-nav .nav-link.active {
+    background-color: transparent;
+    color: inherit;
+}
+
 .banner {
     position: relative;
 }
