--- a/public/starter.css
+++ b/public/starter.css
@@ -21,7 +21,7 @@ body {
 /* Topbar */
 .topbar-wrapper {
     /* background: linear-gradient(120deg, var(--theme-color) 50%, #f1c7cd 50%); */
-    background: linear-gradient(120deg, var(--theme-color) 50%, #28a745 50%);
+    background: linear-gradient(120deg, var(--theme-color) 50%, #fff 50%);
     padding: 6px 0px;
 }
 .contact_info {
@@ -46,7 +46,7 @@ body {
     margin-right: 24px;
 }
 .social li a {
-    color: #ffff;
+    color: #80393d;
 }
 .social li a:hover {
     color: var(--theme-color);
