--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,9 +19,9 @@ h5 {
 --------------------------------------------------------------*/
 .breadcrumbs {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(40, 58, 90, 0.9)), to(rgba(40, 58, 90, 0.9))), url("/theme/img/banner/banner03.jpg") fixed center center;
-  background: linear-gradient(rgba(40, 58, 90, 0.9), rgba(40, 58, 90, 0.9)), url("/theme/img/banner/banner03.jpg") fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(40, 58, 90, 0.7)), url("/theme/img/banner/banner03.jpg") fixed center center;
   background-size: cover;
-  padding: 45px 0;
+  padding: 80px 0;
   margin-bottom: 70px;
   color: white;
   /* padding: 15px 0;
@@ -39,6 +39,11 @@ margin-top: 72px; */
 .breadcrumbs a {
   text-decoration: none;
   color: #dd6310;
+  font-weight: 600;
+}
+.breadcrumbs li {
+
+  font-weight: 800;
 }
 
 @media (max-width: 992px) {
@@ -516,6 +521,46 @@ html {
   background-color: #dd6310;
   width: 5px;
 }
+.about-hollows{
+
+  margin: 0 0 80px 0;
+
+} 
+.about-hollows .MiVi{
+  background-color:#F3F3F3;
+  padding: 50px;
+  margin-top: 40px;
+
+
+
+}
+.about-hollows .MiVi h4{
+  color: #a1c4bc;
+  font-weight: 800;
+
+
+
+}
+.about-hollows .MiVi ul{
+
+list-style: none;
+margin: 0%;
+padding: 0%;
+box-sizing: border-box;
+
+
+}
+.about-hollows .MiVi li{
+    
+  display: flex;
+  padding-top: 20px;
+
+}
+.about-hollows .MiVi li i{
+    
+ color: #dd6310;
+
+}
 
 .about-hollows .title-about {
   font-size: 24px;
@@ -529,6 +574,7 @@ html {
 
 .about-hollows img {
   width: 100%;
+  height:auto;
   border-radius: 3px;
 }
 
@@ -584,7 +630,29 @@ html {
   line-height: 1.8em;
 }
 
-.about-hollows a {
+
+
+
+/* .introduction */
+
+.introduction  {
+  margin-bottom: 40px;
+}
+.introduction p {
+  text-align: justify;
+}
+
+
+/* certificate */
+
+.certificate{
+  margin: 0 0 80px 0;
+}
+.certificate .certificate-img{
+  transform: scale(1.1);
+  
+}
+.certificate a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -596,7 +664,7 @@ html {
   display: flex;
 }
 
-.about-hollows a img {
+.certificate a img {
   width: 80%;
   -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
           box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
@@ -604,7 +672,7 @@ html {
   transition: 0.3s ease-in-out;
 }
 
-.about-hollows a img:hover {
+.certificate a img:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
@@ -612,6 +680,9 @@ html {
 /*--------------------------------------------------------------
 # Team
 --------------------------------------------------------------*/
+.team{
+  margin: 0 0 80px 0;
+}
 .team .member {
   position: relative;
   -webkit-box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
@@ -707,20 +778,20 @@ html {
   border-radius: 50px;
   width: 32px;
   height: 32px;
-  background: #eff2f8;
+  background: #fffafa;
   text-decoration: none;
 }
 
 .team .member .social a:hover {
-  background: #47b2e4;
+  background-color: #dd6310;
 }
 
 .team .member .social a:hover i {
-  color: #fff;
+  color: white;
 }
 
 .team .member .social a i {
-  color: #a1c4bc;
+  color: #b0c3d2;
   font-size: 16px;
   margin: 0 2px;
 }
@@ -2200,6 +2271,13 @@ html {
   padding: 20px 0 20px 0px !important;
 }
 
+.visionAndmission  {
+ margin: 0 0 80px 0;
+}
+.visionAndmission .vm-content {
+ border-radius: 3px;
+ padding: 20px;
+}
 .visionAndmission .row {
   padding: 15px;
   overflow: hidden;
@@ -2219,7 +2297,7 @@ html {
 .visionAndmission p {
   font-size: 1rem;
   line-height: 30px;
-  text-align: start;
+  text-align: justify;
   font-weight: 400;
 }
 
@@ -2271,5 +2349,11 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+.qualityassurance p {
+  text-align: justify;
+}
+.qualityassurance {
+  margin:  0 0 80px 0;
 }
 /*# sourceMappingURL=style.css.map */
