--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -816,6 +816,9 @@ box-sizing: border-box;
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
 }
+.service .service-box a {
+  text-decoration: none;
+}
 
 .service .service-box:hover {
   -webkit-transform: translateY(-10px);
@@ -849,6 +852,8 @@ box-sizing: border-box;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.8em;
+  color: #888;
+  
 }
 
 .service .service-box .service-box-inner .phone-number {
