--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -206,6 +206,10 @@ html {
   /* Firefox */
 }
 
+#header  {
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
 #header .open {
   height: 100%;
 }
