--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,8 +21,8 @@ img{
 # Breadcrumbs
 --------------------------------------------------------------*/
 .breadcrumbs {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(40, 58, 90, 0.9)), to(rgba(40, 58, 90, 0.9))), url("/theme/img/banner/banner03.jpg") fixed center center;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(40, 58, 90, 0.7)), url("/theme/img/banner/banner03.jpg") fixed center center;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(40, 58, 90, 0.6))), url("/theme/img/banner/banner03.jpg") fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(40, 58, 90, 0.6)), url("/theme/img/banner/banner03.jpg") fixed center center;
   background-size: cover;
   padding: 80px 0;
   margin-bottom: 70px;
@@ -76,6 +76,26 @@ margin-top: 72px; */
   padding-right: 10px;
   color: #4668a2;
   content: "/";
+}
+
+/* .banner{
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(40, 58, 90, 0.6)), url("https://images.unsplash.com/photo-1602052577122-f73b9710adba?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fGxhYm9yYXRvcnl8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80") fixed center center;
+  background-size: cover;
+  padding: 150px 0;
+  margin-bottom: 70px;
+  color: white;
+  object-fit: fill;
+} */
+
+.banner{
+  margin: 0 0 70px 0;
+}
+.banner img {
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
+  background: rgba(0, 0, 0, 0.9)
+
 }
 
 .title-left {
@@ -1587,16 +1607,19 @@ box-sizing: border-box;
   
   
 }
-.footer-call li a{
+.footer-call li {
   text-decoration: none;
   color: #b0c3d2;
   font-weight: 400;
   font-size: 14px;
 }
-.footer-call li span{
-  color: #b0c3d2;
-  font-weight: 400;
-  font-size: 14px;
+.footer-call li:hover {
+  color: #dd6310;
+}
+
+.footer-call li span:hover{
+  color: #dd6310;
+
 }
   
 .footer-call li a:hover{
